# shiftdataportal

./: .gitattributes  .gitignore  README.md  codegen.yml  package.json
data-preparation/: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
data-preparation/scripts/countries_and_zones/: 01_upload_to_prod.py
data-preparation/scripts/fossil_fuels/: 01_transform.py  02_upload_to_prod.py
data-preparation/scripts/gapminder/: 01_transform.py
data-preparation/scripts/gas/: 01_transform.py
data-preparation/scripts/oil/: 01_transform.py
data-preparation/scripts/opec/: 01_transform.py
data-preparation/scripts/pik/: 00_split_original_dataset.py  01_split_original_dataset.py  01_transform.py  02_transform.py
data-preparation/scripts/world_bank/: 01_extract.py  02_transform.py
data-preparation/sdp_data_preparation/countries_and_zones/: __init__.py  processors.py  translators.py
data-preparation/sdp_data_preparation/fossil_fuels/: __init__.py  stg_proven_reserves.py  stg_yearly_proven_reserves.py
data-preparation/sdp_data_preparation/gapminder/: __init__.py  final_population.py  final_yearly_population.py  stg_population.py  stg_yearly_population.py
data-preparation/sdp_data_preparation/gas/: __init__.py  stg_proven_reserves.py  stg_yearly_proven_reserves.py
data-preparation/sdp_data_preparation/oil/: stg_yearly_proven_reserves.py
data-preparation/sdp_data_preparation/opec/: README.md  __init__.py  proven_reserves_gas.py  stg_proven_reserves_gas.py  stg_proven_reserves_oil.py  stg_yearly_proven_reserves_gas.py  stg_yearly_proven_reserves_oil.py
data-preparation/src/: 20241129_population_gapminder.ipynb  eia.py  electricity_capacity_api.py  main_electricity.ipynb  main_electricity.py  main_gas.py  main_overview.py  main_population.py  main_primary_energy_production.py  main_transformation.py
data-preparation/src/countries/: main.py  (+1 more)
(+279 files in other folders)
